[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://Root.gd" type="Script" id=3]
[ext_resource path="res://EnemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://EnemySpawner.gd" type="Script" id=5]

[node name="Root" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 46, 64 )

[node name="EnemySpawner" parent="." instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Lives" type="Label" parent="UI"]
margin_left = 18.0
margin_top = 12.0
margin_right = 58.0
margin_bottom = 26.0
text = "Lives"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
